Fix permission of slave device on devpts if necessary.

If devptr is misconfigured the slave device permission after grantpt
might not be 0620.  BZ #10166